--- a/CalligraphySample/build.gradle
+++ b/CalligraphySample/build.gradle
@@ -24,5 +24,7 @@ dependencies {
   compile 'com.android.support:support-v4:22.2.0'
   compile 'com.android.support:appcompat-v7:22.2.0'
 
-  compile 'com.jakewharton:butterknife:5.1.2'
+    compile 'com.malinskiy:materialicons:1.0.2'
+
+    compile 'com.jakewharton:butterknife:5.1.2'
 }
